# bandit-agent-tools

./: .env.example  .gitignore  AGENTS.md  README.md
.cursor/: mcp.json
.cursor/skills/bandit-server/: SKILL.md
.cursor/skills/gamesglobal-gitlab/: SKILL.md
.cursor/skills/jira-nailedit/: SKILL.md
.cursor/skills/nailedit-game-servers/: SKILL.md
.cursor/skills/netherlands-cert-files/: SKILL.md
.cursor/skills/netherlands-cert-files/scripts/: build_description_xlsx.py  copy_files.py  make_zip.py
.cursor/skills/task-bandit-simulations/: SKILL.md
.cursor/skills/task-netherlands-files/: SKILL.md
tools/jira/: jira_issue.py
tools/rng-distribution-report/: generate_excel_report.py  generate_json_report.py  readme.md
tools/rng-distribution-report-rust/: Cargo.toml  README.md
tools/rng-distribution-report-rust/src/: generate_excel_report.rs  generate_json_report.rs
